--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.2.0",
+    "react-notifications": "^1.7.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
